--- a/css/style.css
+++ b/css/style.css
@@ -35,12 +35,13 @@ hamburger
 }
 #header .hamburger.hamburger:before {
   border: 1px solid #ead2a1;
+  border: 1px solid #fff9;
   opacity: 0;
   animation: ham-pulse 2.5s ease infinite;
 }
 @keyframes ham-pulse {
   50% {
-    opacity: 0.7;
+    opacity: 0.5;
   }
   100% {
     opacity: 0;
@@ -125,12 +126,16 @@ hamburger
 .progress-bar {
   height: 3px;
   background: #ead2a1;
+  background: #29323c;
+  background: linear-gradient(90deg, #29323c, #485563, #29323c);
   opacity: 0.1;
   width: 0%;
   transition: 0.5s;
+  border-top-right-radius: 0.5rem;
+  border-bottom-right-radius: 0.5rem;
 }
 .progress-bar.active-bar {
-  opacity: 0.8;
+  opacity: 0.5;
 }
 
 /* end of progress bar*/
@@ -352,7 +357,7 @@ hamburger
   font-size: 1rem;
   font-size: 100%;
   font-weight: 700;
-  color: #fff7;
+  color: #fff9;
   transition: 0.25s;
 }
 .bottom-nav .link-item a {
@@ -369,7 +374,7 @@ hamburger
 }
 @media (max-width: 768px) {
   .bottom-nav .link-item:active i {
-    color: #ead2a1;
+    color: #f4f4f4;
   }
 }
 @media (min-width: 768px) {
@@ -378,6 +383,7 @@ hamburger
   }
   .bottom-nav .link-item:hover i {
     color: #ead2a1;
+    color: #f4f4f4;
   }
 }
 .bottom-nav.active-bottom-nav {
@@ -629,9 +635,8 @@ hamburger
   background: linear-gradient(0deg, #deb86e, #ead2a1);
   background: linear-gradient(#f4f4f4, #fff);
   background: inherit;
-  color: #29323c;
-  color: inherit;
-  opacity: 0.7;
+  color: #f4f4f4;
+  color: #fff9;
   border-radius: 0;
   transition: 0.2s;
 }
@@ -720,8 +725,8 @@ hamburger
     transition: 0.5s;
   }
   #header .header #navbar .nav-list .links-container .contact-links a i {
-    color: #fff7;
     color: #ead2a1;
+    color: #fff9;
     margin-right: 0.2rem;
     width: 1.5rem;
     border-right: 1px solid #fff4;
