--- a/sass/_utilities.scss
+++ b/sass/_utilities.scss
@@ -138,11 +138,13 @@ hamburger
                 height: .3em;
                 &::before {
                     background-color: $span-gold;
+                    background-color: $light-span;
                     transform: translateY(0) skewY(40deg) ;
                 }
 
                 &::after {
                     background-color: $span-gold;
+                    background-color: $light-span;
                     transform: translateY(0) skewY(-40deg) skewX(0);
 
                 }
