--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -262,7 +262,7 @@
                                 color: $text-light;
                                 font-size: 1rem;
                                 // letter-spacing: .1rem;
-                                margin-bottom: .5rem;
+                                margin-bottom: 1rem;
                                 transition: .5s;
 
                                 i {
