--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -24,6 +24,7 @@ $text-light-hover: #fffa;
 // span and border
 $span-crimson: #dc143c;
 $span-gold: #ead2a1;
+$span-light: #fff9;
 $light-span: #fff9;
 $span-brand: #f72751;
 $span-violet: violet;
