--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -721,7 +721,7 @@
         }
     }
     a {
-        color: $span-gold;
+        color: $span-light;
         &:hover {
             opacity: .9;
         }
