--- a/sass/_projects.scss
+++ b/sass/_projects.scss
@@ -90,9 +90,9 @@
                     transition: 1.3s ease;
                     // project Title (h1)
                     h1 {
-                        font-size: 1.25rem;
+                        font-size: 1.15rem;
                         width: 100%;
-                        color: $span-gold;
+                        color: $span-light;
                         @media (min-width: 768px){
                             font-size: 1.5rem;
                         }
