about first letter

--- a/css/style.css
+++ b/css/style.css
@@ -2970,6 +2970,7 @@ hamburger
   float: left;
   background: #20262e;
   color: #fff9;
+  color: #f4f4f4;
   padding: 0 0.1em;
   margin-right: 0.1em;
   border-radius: 0.25rem;
