--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -217,6 +217,7 @@
                             float: left;
                             background: $overlay-blue-darker;
                             color: $span-light;
+                            color: $text-light;
                             padding: 0 .1em;
                             margin-right: .1em;
                             border-radius: .25rem;
