--- a/sass/_contact.scss
+++ b/sass/_contact.scss
@@ -185,7 +185,7 @@
                         padding: .7rem;
                         border-radius: .5rem;
                         margin: .5rem auto;
-                        color: $text-white-e;
+                        color: $brand;
                         cursor: pointer;
                         transition: .3s ease;
                         position: relative;
