--- a/sass/_projects.scss
+++ b/sass/_projects.scss
@@ -250,7 +250,7 @@
 
                         li {
                             font-size: .8em;
-                            color: $text-white-trans;
+                            color: $brand;
                             list-style: none;
                             padding: .4em .3em;
                             margin-right: .1em;
