--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -9,23 +9,24 @@ $font-content: 'Montserrat', sans-serif;
 $text-black: #000;
 $text-white: #fff;
 $text-light: #f4f4f4;
-$text-light-trans: #fffa;
-$text-white-trans: #fffa;
-$text-white-trans-d: #ddda;
-$text-dark: #333;
-$text-black-trans: #000a;
-$text-light-d: #ddd;
-$text-light-d-trans: #ddda;
-$text-white-e: #eee;
-$text-white-d: #ddd;
-$text-lime: #bfee50;
-$text-light-hover: #fffa;
+// $text-light-trans: #fffa;
+// $text-white-trans: #fffa;
+// $text-white-trans-d: #ddda;
+// $text-dark: #333;
+// $text-black-trans: #000a;
+// $text-light-d: #ddd;
+// $text-light-d-trans: #ddda;
+// $text-white-e: #eee;
+// $text-white-d: #ddd;
+// $text-lime: #bfee50;
+// $text-light-hover: #fffa;
 
-// span and border
+// SPAN AND BRAND
 $span-crimson: #dc143c;
 $span-gold: #ead2a1;
 $span-light: #fff9;
 $light-span: #fff9;
+$brand: #fff9;
 $span-brand: #f72751;
 $span-violet: violet;
 $span-blue: #0000ff;
