--- a/sass/style.scss
+++ b/sass/style.scss
@@ -312,7 +312,7 @@ section {
         inset -3px -3px 5px #000a;
 
     h3 {
-        color: $text-white-e;
+        color: $brand;
         margin: .5em auto;
         font-size: 1em;
         
@@ -324,7 +324,7 @@ section {
             margin: 1em auto;
             padding: .5em 3em;
             text-align: center;
-            color: $text-white-e;
+            color: $brand;
             position: relative;
 
             // icon box shadow
