--- a/css/style.css
+++ b/css/style.css
@@ -554,7 +554,7 @@ hamburger
     overflow: hidden;
   }
 }
-#header.hero-header .header #navbar .brand {
+#header.hero-header .header #navbar .logo {
   opacity: 1;
   transform: translateY(0);
 }
@@ -576,7 +576,7 @@ hamburger
     display: none;
   }
 }
-#header.header-io .header #navbar .brand {
+#header.header-io .header #navbar .logo {
   opacity: 1;
   transform: translateY(0);
   transition: 1s;
@@ -605,22 +605,19 @@ hamburger
     padding: 0 5vw;
   }
 }
-#header .header #navbar .brand {
+#header .header #navbar .logo {
   transition: 1s ease;
-  opacity: 0;
   opacity: 1;
   transform: translateY(-11vh);
   transition: 1s;
 }
-#header .header #navbar .brand p {
+#header .header #navbar .logo p {
   font-size: 1rem;
   font-family: "Kanit", sans-serif;
   font-weight: 400;
   text-transform: capitalize;
-  color: #ead2a1;
   color: #f4f4f4;
   background-color: #15191e;
-  border: 1px solid #f4f4f4;
   border: 1px solid #fff2;
   padding-left: 0.2rem;
   border-radius: 0.25rem;
@@ -628,16 +625,15 @@ hamburger
   transition: 0.5s;
 }
 @media (min-width: 768px) {
-  #header .header #navbar .brand p {
+  #header .header #navbar .logo p {
     font-size: 1.25rem;
   }
 }
-#header .header #navbar .brand p span {
+#header .header #navbar .logo p span {
   padding-right: 0.2rem;
   background: linear-gradient(0deg, #deb86e, #ead2a1);
   background: linear-gradient(#f4f4f4, #fff);
   background: inherit;
-  color: #f4f4f4;
   color: #fff9;
   border-radius: 0;
   transition: 0.2s;
@@ -2245,7 +2241,7 @@ hamburger
   padding: 0.7rem;
   border-radius: 0.5rem;
   margin: 0.5rem auto;
-  color: #eee;
+  color: #ead2a1;
   cursor: pointer;
   transition: 0.3s ease;
   position: relative;
@@ -2528,7 +2524,7 @@ hamburger
 }
 #projects .projects .all-projects .project-item .tech-list ul li {
   font-size: 0.8em;
-  color: #fffa;
+  color: #ead2a1;
   list-style: none;
   padding: 0.4em 0.3em;
   margin-right: 0.1em;
@@ -2836,7 +2832,7 @@ hamburger
   font-size: 0.6em;
   font-weight: 600;
   text-transform: capitalize;
-  color: #eee;
+  color: #ead2a1;
   background-color: #dc143c;
   border-radius: 10px;
   transition: 0.5s ease;
@@ -3115,7 +3111,6 @@ hamburger
 .about .col-left .about-img::before {
   content: "Boitumelo Sempe";
   content: "";
-  color: #333;
   background-image: url("../img/me-min.jpg");
   background-position: center;
   animation: fade-out 5s infinite;
@@ -3560,7 +3555,7 @@ hamburger
 #footer .footer .brand h3::before {
   content: "";
   text-align: center;
-  color: #eee;
+  color: pink;
   background: linear-gradient(0deg, #29323c 0%, #485563 100%);
   box-shadow: inset 3px 3px 5px rgba(221, 221, 221, 0.156), inset -3px -3px 5px rgba(0, 0, 0, 0.156);
 }
@@ -3570,7 +3565,7 @@ hamburger
 }
 #footer .footer .brand h2 {
   font-family: "Ubuntu", sans-serif;
-  color: #ddd;
+  color: #ead2a1;
   font-weight: 500;
   font-size: 1.2em;
   letter-spacing: 0.1em;
@@ -3624,7 +3619,7 @@ hamburger
   content: "";
   font-size: 1.5em;
   text-align: center;
-  color: #ddd;
+  color: #ead2a1;
   opacity: 1;
   background-image: linear-gradient(0deg, #252e36c4, #6e051a9c);
   box-shadow: inset 3px 3px 5px #ddda, inset -3px 0px 5px #000;
@@ -3664,7 +3659,7 @@ hamburger
   bottom: -140%;
   left: -0.5em;
   font-size: 0.5em;
-  color: #ddd;
+  color: #ead2a1;
   width: 100%;
   height: 100%;
   opacity: 0;
@@ -4039,7 +4034,7 @@ section .section-title {
   box-shadow: inset 3px 3px 5px #ddda, inset -3px -3px 5px #000a;
 }
 #thanks h3 {
-  color: #eee;
+  color: #ead2a1;
   margin: 0.5em auto;
   font-size: 1em;
 }
@@ -4049,7 +4044,7 @@ section .section-title {
   margin: 1em auto;
   padding: 0.5em 3em;
   text-align: center;
-  color: #eee;
+  color: #ead2a1;
   position: relative;
 }
 #thanks a i::after {
