--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -471,7 +471,7 @@
                 &::before {
                     content: '\f337';
                     text-align: center;
-                    color: $text-white-e;
+                    color: pink;
                     background: $overlay;
                     box-shadow: inset 3px 3px 5px rgba(221, 221, 221, 0.156),
                     inset -3px -3px 5px rgba(0, 0, 0, 0.156);
@@ -492,7 +492,7 @@
             // h2 pop up messsage
             h2 {
                 font-family: $font-ubuntu;
-                color: $text-white-d;
+                color: $brand;
                 font-weight: 500;
                 font-size: 1.2em;
                 letter-spacing: .1em;
@@ -553,7 +553,7 @@
                 content: "\f0c0";
                 font-size: 1.5em;
                 text-align: center;
-                color: $text-white-d;
+                color: $brand;
                 opacity: 1;
                 background-image: linear-gradient(0deg, #252e36c4, #6e051a9c);
                 box-shadow: inset 3px 3px 5px #ddda,
@@ -596,7 +596,7 @@
                         bottom: -140%;
                         left: -.5em;
                         font-size: .5em;
-                        color: $text-white-d;
+                        color: $brand;
                         width: 100%;
                         height: 100%;
                         opacity: 0;
