--- a/sass/style.scss
+++ b/sass/style.scss
@@ -176,7 +176,8 @@ section {
             }
             &:hover {
                 img {
-                    transform: scale(1.5);
+                    transform: scale(1.1);
+                    transition: .5s;
                 }
             }
         }
