--- a/sass/_work.scss
+++ b/sass/_work.scss
@@ -17,7 +17,7 @@
 
         }
         .work-item {
-            border: 1px solid #0002;
+            // border: 1px solid #0002;
             padding: 5vh 0;
             width: 100%;
             border-radius: .5rem;
