--- a/css/style.css
+++ b/css/style.css
@@ -125,8 +125,8 @@ hamburger
 /* The progress bar (scroll indicator) */
 .progress-bar {
   height: 3px;
-  background: #ead2a1;
   background: #29323c;
+  background: #ead2a1;
   background: linear-gradient(90deg, #29323c, #485563, #29323c);
   opacity: 0.1;
   width: 0%;
@@ -1594,7 +1594,7 @@ hamburger
   position: absolute;
   left: -0.5em;
   bottom: 1em;
-  background-image: radial-gradient(circle at top, #ead2a1, 50%, #000);
+  background-image: radial-gradient(circle at top, #fff9, 50%, #000);
   animation: scene 20s infinite linear reverse;
 }
 @keyframes ball-bounce {
@@ -1658,7 +1658,7 @@ hamburger
   font-size: 0.25em;
   text-transform: uppercase;
   transition: 0.25s;
-  color: #ead2a1;
+  color: #fff9;
   pointer-events: none;
 }
 .cube .left:hover,
@@ -1808,7 +1808,9 @@ hamburger
   z-index: 4;
 }
 #skills .dropdown.io-item {
+  transform: scale(1) translateY(5vh);
   opacity: 0;
+  transition: 1s;
 }
 #skills .dropdown.active-item {
   opacity: 1;
@@ -1818,21 +1820,31 @@ hamburger
 #skills .dropdown .dropbtn {
   color: #f4f4f4;
   padding: 0.5rem 1rem;
+  margin-inline: auto;
   width: 20rem;
   font-size: 1.35rem;
   font-weight: 400;
   cursor: pointer;
   border: none;
-  outline: none;
   border-radius: 0.5rem;
   background: #000a;
   text-align: center;
   text-transform: capitalize;
-  transition: 0.2s;
+  transition: 0.25s;
   font-family: "Kanit", sans-serif;
-  letter-spacing: 0.15rem;
+  letter-spacing: 0.025rem;
   position: relative;
   isolation: isolate;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+#skills .dropdown .dropbtn i {
+  font-weight: 600;
+  margin-left: 0.5rem;
+  font-size: 1rem;
+  color: #fff9;
+  transition: 0.5s;
 }
 #skills .dropdown .dropbtn::before, #skills .dropdown .dropbtn::after {
   position: absolute;
@@ -1860,6 +1872,9 @@ hamburger
   transform: scale(0.98);
   letter-spacing: normal;
   color: #ead2a1;
+}
+#skills .dropdown .dropbtn.active i {
+  color: #f4f4f4;
 }
 #skills .dropdown .dropbtn.active::before {
   opacity: 0;
@@ -2246,7 +2261,7 @@ hamburger
   padding: 0.7rem;
   border-radius: 0.5rem;
   margin: 0.5rem auto;
-  color: #ead2a1;
+  color: #fff9;
   cursor: pointer;
   transition: 0.3s ease;
   position: relative;
@@ -2529,7 +2544,7 @@ hamburger
 }
 #projects .projects .all-projects .project-item .tech-list ul li {
   font-size: 0.8em;
-  color: #ead2a1;
+  color: #fff9;
   list-style: none;
   padding: 0.4em 0.3em;
   margin-right: 0.1em;
@@ -2836,7 +2851,7 @@ hamburger
   font-size: 0.6em;
   font-weight: 600;
   text-transform: capitalize;
-  color: #ead2a1;
+  color: #fff9;
   background-color: #dc143c;
   border-radius: 10px;
   transition: 0.5s ease;
@@ -3334,7 +3349,7 @@ hamburger
   font-size: 1.25rem;
   margin-bottom: 0.25rem;
   text-transform: capitalize;
-  color: #ead2a1;
+  color: #fff9;
   color: #f4f4f4;
   font-weight: 300;
   text-align: center;
@@ -3569,7 +3584,7 @@ hamburger
 }
 #footer .footer .brand h2 {
   font-family: "Ubuntu", sans-serif;
-  color: #ead2a1;
+  color: #fff9;
   font-weight: 500;
   font-size: 1.2em;
   letter-spacing: 0.1em;
@@ -3623,7 +3638,7 @@ hamburger
   content: "";
   font-size: 1.5em;
   text-align: center;
-  color: #ead2a1;
+  color: #fff9;
   opacity: 1;
   background-image: linear-gradient(0deg, #252e36c4, #6e051a9c);
   box-shadow: inset 3px 3px 5px #ddda, inset -3px 0px 5px #000;
@@ -3663,7 +3678,7 @@ hamburger
   bottom: -140%;
   left: -0.5em;
   font-size: 0.5em;
-  color: #ead2a1;
+  color: #fff9;
   width: 100%;
   height: 100%;
   opacity: 0;
@@ -4039,7 +4054,7 @@ section .section-title {
   box-shadow: inset 3px 3px 5px #ddda, inset -3px -3px 5px #000a;
 }
 #thanks h3 {
-  color: #ead2a1;
+  color: #fff9;
   margin: 0.5em auto;
   font-size: 1em;
 }
@@ -4049,7 +4064,7 @@ section .section-title {
   margin: 1em auto;
   padding: 0.5em 3em;
   text-align: center;
-  color: #ead2a1;
+  color: #fff9;
   position: relative;
 }
 #thanks a i::after {
