--- a/css/style.css
+++ b/css/style.css
@@ -98,11 +98,11 @@ hamburger
   height: 0.3em;
 }
 #header .hamburger.active .bar::before {
-  background-color: #fff9;
+  background-color: #ffffffbf;
   transform: translateY(0) skewY(40deg);
 }
 #header .hamburger.active .bar::after {
-  background-color: #fff9;
+  background-color: #ffffffbf;
   transform: translateY(0) skewY(-40deg) skewX(0);
 }
 
@@ -632,7 +632,7 @@ hamburger
   background: linear-gradient(0deg, #deb86e, #ead2a1);
   background: linear-gradient(#f4f4f4, #fff);
   background: inherit;
-  color: #fff9;
+  color: #ffffffbf;
   border-radius: 0;
   transition: 0.2s;
 }
@@ -1594,7 +1594,7 @@ hamburger
   position: absolute;
   left: -0.5em;
   bottom: 1em;
-  background-image: radial-gradient(circle at top, #fff9, 50%, #000);
+  background-image: radial-gradient(circle at top, #ffffffbf, 50%, #000);
   animation: scene 20s infinite linear reverse;
 }
 @keyframes ball-bounce {
@@ -1658,7 +1658,7 @@ hamburger
   font-size: 0.25em;
   text-transform: uppercase;
   transition: 0.25s;
-  color: #fff9;
+  color: #ffffffbf;
   pointer-events: none;
 }
 .cube .left:hover,
@@ -1730,6 +1730,7 @@ hamburger
   text-align: center;
   background: linear-gradient(0deg, #29323c 0%, #485563 100%);
   background: #fff;
+  min-height: auto;
 }
 #skills .skills-header {
   width: 100%;
@@ -1843,7 +1844,7 @@ hamburger
   font-weight: 600;
   margin-left: 0.5rem;
   font-size: 1rem;
-  color: #fff9;
+  color: #ffffffbf;
   transition: 0.5s;
 }
 #skills .dropdown .dropbtn::before, #skills .dropdown .dropbtn::after {
@@ -2198,7 +2199,7 @@ hamburger
   border: none;
   background: #20262e;
   border-radius: 50%;
-  outline: 2px solid #fff4;
+  outline: 2px solid #fff2;
   position: relative;
   display: grid;
   place-items: center;
@@ -2261,7 +2262,7 @@ hamburger
   padding: 0.7rem;
   border-radius: 0.5rem;
   margin: 0.5rem auto;
-  color: #fff9;
+  color: #ffffffbf;
   cursor: pointer;
   transition: 0.3s ease;
   position: relative;
@@ -2407,10 +2408,10 @@ hamburger
     padding: 2em;
   }
 }
-#projects .projects .all-projects .project-item .project-tile h1 {
+#projects .projects .all-projects .project-item .project-tile h2 {
   font-size: 1.15rem;
   width: 100%;
-  color: #fff9;
+  color: #f4f4f4;
   font-weight: 500;
   text-transform: capitalize;
   line-height: 1em;
@@ -2421,27 +2422,27 @@ hamburger
   border-bottom: 1px dashed #f4f4f4;
 }
 @media (min-width: 768px) {
-  #projects .projects .all-projects .project-item .project-tile h1 {
+  #projects .projects .all-projects .project-item .project-tile h2 {
     font-size: 1.5rem;
   }
 }
-#projects .projects .all-projects .project-item .project-tile h2 {
+#projects .projects .all-projects .project-item .project-tile h3 {
   font-size: 1rem;
   line-height: 1.5;
   font-weight: 500;
   margin: 0.5rem 0;
   text-transform: capitalize;
-  color: #f4f4f4;
+  color: #ffffffbf;
   transition: 0.3s;
 }
 @media (min-width: 768px) {
-  #projects .projects .all-projects .project-item .project-tile h2 {
+  #projects .projects .all-projects .project-item .project-tile h3 {
     font-size: 1.25rem;
   }
 }
 #projects .projects .all-projects .project-item .project-tile p {
   font-size: 0.9rem;
-  font-weight: 300;
+  font-weight: 400;
   color: #ffff;
   margin: 0.5rem 0;
 }
@@ -2460,7 +2461,6 @@ hamburger
   outline: none;
   border-radius: 0.5rem;
   transition: all 0.3s ease;
-  border: 1px solid #ead2a1;
 }
 #projects .projects .all-projects .project-item .project-tile a i {
   transition: 0.2s;
@@ -2544,7 +2544,7 @@ hamburger
 }
 #projects .projects .all-projects .project-item .tech-list ul li {
   font-size: 0.8em;
-  color: #fff9;
+  color: #ffffffbf;
   list-style: none;
   padding: 0.4em 0.3em;
   margin-right: 0.1em;
@@ -2851,7 +2851,7 @@ hamburger
   font-size: 0.6em;
   font-weight: 600;
   text-transform: capitalize;
-  color: #fff9;
+  color: #ffffffbf;
   background-color: #dc143c;
   border-radius: 10px;
   transition: 0.5s ease;
@@ -3349,7 +3349,7 @@ hamburger
   font-size: 1.25rem;
   margin-bottom: 0.25rem;
   text-transform: capitalize;
-  color: #fff9;
+  color: #ffffffbf;
   color: #f4f4f4;
   font-weight: 300;
   text-align: center;
@@ -3584,7 +3584,7 @@ hamburger
 }
 #footer .footer .brand h2 {
   font-family: "Ubuntu", sans-serif;
-  color: #fff9;
+  color: #ffffffbf;
   font-weight: 500;
   font-size: 1.2em;
   letter-spacing: 0.1em;
@@ -3638,7 +3638,7 @@ hamburger
   content: "";
   font-size: 1.5em;
   text-align: center;
-  color: #fff9;
+  color: #ffffffbf;
   opacity: 1;
   background-image: linear-gradient(0deg, #252e36c4, #6e051a9c);
   box-shadow: inset 3px 3px 5px #ddda, inset -3px 0px 5px #000;
@@ -3678,7 +3678,7 @@ hamburger
   bottom: -140%;
   left: -0.5em;
   font-size: 0.5em;
-  color: #fff9;
+  color: #ffffffbf;
   width: 100%;
   height: 100%;
   opacity: 0;
@@ -4054,7 +4054,7 @@ section .section-title {
   box-shadow: inset 3px 3px 5px #ddda, inset -3px -3px 5px #000a;
 }
 #thanks h3 {
-  color: #fff9;
+  color: #ffffffbf;
   margin: 0.5em auto;
   font-size: 1em;
 }
@@ -4064,7 +4064,7 @@ section .section-title {
   margin: 1em auto;
   padding: 0.5em 3em;
   text-align: center;
-  color: #fff9;
+  color: #ffffffbf;
   position: relative;
 }
 #thanks a i::after {
