--- a/sass/_utilities.scss
+++ b/sass/_utilities.scss
@@ -528,7 +528,7 @@ hamburger
         display: grid;
         place-items: center;
         isolation: isolate;
-        color: $overlay-blue-light;
+        color: $brand;
         text-transform: capitalize;
         
         .sector {
