skills icons shadows

--- a/css/style.css
+++ b/css/style.css
@@ -2007,18 +2007,18 @@ hamburger
   height: 100%;
   border-radius: 50%;
   z-index: -1;
-  box-shadow: inset 2px 2px 3px #ddda, inset -2px -2px 5px #000a, 3px 3px 4px #000;
+  box-shadow: inset 2px 2px 3px rgba(255, 255, 255, 0.2), inset -2px -2px 5px rgba(0, 0, 0, 0.25), 3px 3px 4px #000;
   animation: skill-icon 10s linear infinite;
 }
 @keyframes skill-icon {
   25% {
-    box-shadow: inset -2px 3px 3px #ddda, inset 2px -2px 5px #000a, -3px 3px 4px #000;
+    box-shadow: inset -2px 3px 3px rgba(255, 255, 255, 0.2), inset 2px -2px 5px rgba(0, 0, 0, 0.25), -3px 3px 4px #000;
   }
   50% {
-    box-shadow: inset 0px -1px 3px #ddda, inset 0px 2px 5px #000a, 0 2px 4px #000;
+    box-shadow: inset 0px -1px 3px rgba(255, 255, 255, 0.2), inset 0px 2px 5px rgba(0, 0, 0, 0.25), 0 2px 4px #000;
   }
   75% {
-    box-shadow: inset 2px 0px 3px #ddda, inset -2px 0px 5px #000a, -2px 2px 4px #000;
+    box-shadow: inset 2px 0px 3px rgba(255, 255, 255, 0.2), inset -2px 0px 5px rgba(0, 0, 0, 0.25), -2px 2px 4px #000;
   }
 }
 #skills .dropdown .dropdown-content .skills-bottom .skills-item .icon::after {
@@ -2034,7 +2034,7 @@ hamburger
   opacity: 0.4;
 }
 #skills .dropdown .dropdown-content .skills-bottom .skills-item h3 {
-  font-size: 1.5rem;
+  font-size: 1.25rem;
   font-weight: 400;
   color: #ead2a1;
   margin-bottom: 0.5rem;
