--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -26,7 +26,8 @@ $span-crimson: #dc143c;
 $span-gold: #ead2a1;
 $span-light: #fff9;
 $light-span: #fff9;
-$brand: #ffffffbf;
+$brand: #fff9;
+$brand: rgba(255, 255, 255, 0.7);
 $span-brand: #f72751;
 $span-violet: violet;
 $span-blue: #0000ff;
