--- a/css/style.css
+++ b/css/style.css
@@ -98,11 +98,11 @@ hamburger
   height: 0.3em;
 }
 #header .hamburger.active .bar::before {
-  background-color: #ffffffbf;
+  background-color: rgba(255, 255, 255, 0.7);
   transform: translateY(0) skewY(40deg);
 }
 #header .hamburger.active .bar::after {
-  background-color: #ffffffbf;
+  background-color: rgba(255, 255, 255, 0.7);
   transform: translateY(0) skewY(-40deg) skewX(0);
 }
 
@@ -442,7 +442,7 @@ hamburger
   display: grid;
   place-items: center;
   isolation: isolate;
-  color: #ffffffbf;
+  color: rgba(255, 255, 255, 0.7);
   text-transform: capitalize;
 }
 .loader_bg .spinner .sector {
@@ -632,7 +632,7 @@ hamburger
   background: linear-gradient(0deg, #deb86e, #ead2a1);
   background: linear-gradient(#f4f4f4, #fff);
   background: inherit;
-  color: #ffffffbf;
+  color: rgba(255, 255, 255, 0.7);
   border-radius: 0;
   transition: 0.2s;
 }
@@ -1594,7 +1594,7 @@ hamburger
   position: absolute;
   left: -0.5em;
   bottom: 1em;
-  background-image: radial-gradient(circle at top, #ffffffbf, 50%, #000);
+  background-image: radial-gradient(circle at top, rgba(255, 255, 255, 0.7), 50%, #000);
   animation: scene 20s infinite linear reverse;
 }
 @keyframes ball-bounce {
@@ -1658,7 +1658,7 @@ hamburger
   font-size: 0.25em;
   text-transform: uppercase;
   transition: 0.25s;
-  color: #ffffffbf;
+  color: rgba(255, 255, 255, 0.7);
   pointer-events: none;
 }
 .cube .left:hover,
@@ -1844,7 +1844,7 @@ hamburger
   font-weight: 600;
   margin-left: 0.5rem;
   font-size: 1rem;
-  color: #ffffffbf;
+  color: rgba(255, 255, 255, 0.7);
   transition: 0.5s;
 }
 #skills .dropdown .dropbtn::before, #skills .dropdown .dropbtn::after {
@@ -2262,7 +2262,7 @@ hamburger
   padding: 0.7rem;
   border-radius: 0.5rem;
   margin: 0.5rem auto;
-  color: #ffffffbf;
+  color: rgba(255, 255, 255, 0.7);
   cursor: pointer;
   transition: 0.3s ease;
   position: relative;
@@ -2432,7 +2432,7 @@ hamburger
   font-weight: 500;
   margin: 0.5rem 0;
   text-transform: capitalize;
-  color: #ffffffbf;
+  color: rgba(255, 255, 255, 0.7);
   transition: 0.3s;
 }
 @media (min-width: 768px) {
@@ -2544,7 +2544,7 @@ hamburger
 }
 #projects .projects .all-projects .project-item .tech-list ul li {
   font-size: 0.8em;
-  color: #ffffffbf;
+  color: rgba(255, 255, 255, 0.7);
   list-style: none;
   padding: 0.4em 0.3em;
   margin-right: 0.1em;
@@ -2851,7 +2851,7 @@ hamburger
   font-size: 0.6em;
   font-weight: 600;
   text-transform: capitalize;
-  color: #ffffffbf;
+  color: rgba(255, 255, 255, 0.7);
   background-color: #dc143c;
   border-radius: 10px;
   transition: 0.5s ease;
@@ -3350,7 +3350,7 @@ hamburger
   margin-bottom: 0.25rem;
   text-transform: capitalize;
   color: #f4f4f4;
-  color: #ffffffbf;
+  color: rgba(255, 255, 255, 0.7);
   font-weight: 400;
   text-align: center;
   font-family: "Kanit", sans-serif;
@@ -3584,7 +3584,7 @@ hamburger
 }
 #footer .footer .brand h2 {
   font-family: "Ubuntu", sans-serif;
-  color: #ffffffbf;
+  color: rgba(255, 255, 255, 0.7);
   font-weight: 500;
   font-size: 1.2em;
   letter-spacing: 0.1em;
@@ -3638,7 +3638,7 @@ hamburger
   content: "";
   font-size: 1.5em;
   text-align: center;
-  color: #ffffffbf;
+  color: rgba(255, 255, 255, 0.7);
   opacity: 1;
   background-image: linear-gradient(0deg, #252e36c4, #6e051a9c);
   box-shadow: inset 3px 3px 5px #ddda, inset -3px 0px 5px #000;
@@ -3678,7 +3678,7 @@ hamburger
   bottom: -140%;
   left: -0.5em;
   font-size: 0.5em;
-  color: #ffffffbf;
+  color: rgba(255, 255, 255, 0.7);
   width: 100%;
   height: 100%;
   opacity: 0;
@@ -4054,7 +4054,7 @@ section .section-title {
   box-shadow: inset 3px 3px 5px #ddda, inset -3px -3px 5px #000a;
 }
 #thanks h3 {
-  color: #ffffffbf;
+  color: rgba(255, 255, 255, 0.7);
   margin: 0.5em auto;
   font-size: 1em;
 }
@@ -4064,7 +4064,7 @@ section .section-title {
   margin: 1em auto;
   padding: 0.5em 3em;
   text-align: center;
-  color: #ffffffbf;
+  color: rgba(255, 255, 255, 0.7);
   position: relative;
 }
 #thanks a i::after {
