--- a/css/style.css
+++ b/css/style.css
@@ -2007,18 +2007,18 @@ hamburger
   height: 100%;
   border-radius: 50%;
   z-index: -1;
-  box-shadow: inset 2px 2px 3px rgba(255, 255, 255, 0.2), inset -2px -2px 5px rgba(0, 0, 0, 0.25), 3px 3px 4px #000;
+  box-shadow: inset 2px 2px 3px rgba(255, 255, 255, 0.2), inset -2px -2px 5px rgba(0, 0, 0, 0.25), 3px 3px 4px #000a;
   animation: skill-icon 10s linear infinite;
 }
 @keyframes skill-icon {
   25% {
-    box-shadow: inset -2px 3px 3px rgba(255, 255, 255, 0.2), inset 2px -2px 5px rgba(0, 0, 0, 0.25), -3px 3px 4px #000;
+    box-shadow: inset -2px 3px 3px rgba(255, 255, 255, 0.2), inset 2px -2px 5px rgba(0, 0, 0, 0.25), -3px 3px 4px #000a;
   }
   50% {
-    box-shadow: inset 0px -1px 3px rgba(255, 255, 255, 0.2), inset 0px 2px 5px rgba(0, 0, 0, 0.25), 0 2px 4px #000;
+    box-shadow: inset 0px -1px 3px rgba(255, 255, 255, 0.2), inset 0px 2px 5px rgba(0, 0, 0, 0.25), 0 2px 4px #000a;
   }
   75% {
-    box-shadow: inset 2px 0px 3px rgba(255, 255, 255, 0.2), inset -2px 0px 5px rgba(0, 0, 0, 0.25), -2px 2px 4px #000;
+    box-shadow: inset 2px 0px 3px rgba(255, 255, 255, 0.2), inset -2px 0px 5px rgba(0, 0, 0, 0.25), -2px 2px 4px #000a;
   }
 }
 #skills .dropdown .dropdown-content .skills-bottom .skills-item .icon::after {
