--- a/css/style.css
+++ b/css/style.css
@@ -525,17 +525,16 @@ hamburger
   font-size: 1.5rem;
 }
 
-#header {
+.header {
   position: fixed;
   z-index: 50;
   left: 0;
   top: 0;
   width: 100%;
   height: 8vh;
-  background: transparent;
   isolation: isolate;
 }
-#header::after {
+.header::after {
   content: "";
   position: absolute;
   top: 0;
@@ -547,49 +546,54 @@ hamburger
   transition: 0.25s;
 }
 @media (min-width: 1024px) {
-  #header {
+  .header {
     height: 15vh;
     overflow: hidden;
   }
 }
-#header.hero-header .header #navbar .logo {
-  opacity: 1;
-  transform: translateY(0);
+.header.hero-header .navbar {
+  background: transparent;
 }
-#header.header-io {
+.header.hero-header .navbar #nav .logo {
+  transform: translateY(-10vh);
+}
+.header.header-io {
   transition: background-color 0.25s;
   transition: all 0.25s;
 }
-#header.header-io::after {
+.header.header-io::after {
   opacity: 1;
 }
 @media (min-width: 1024px) {
-  #header.header-io {
+  .header.header-io {
     height: 8vh;
     transition: 0.25s;
     border: none;
   }
-  #header.header-io #navbar .nav-list .contact-links {
+  .header.header-io #nav .nav-list .contact-links {
     transform: translateY(-100vh);
     display: none;
   }
 }
-#header.header-io .header #navbar .logo {
+.header.header-io .header #nav .logo {
   opacity: 1;
   transform: translateY(0);
   transition: 1s;
 }
-#header.header-io .header #navbar .nav-list ul li {
+.header.header-io .header #nav .nav-list ul li {
   opacity: 1;
 }
-#header.header-io.active-header {
+.header.header-io.active-header {
   background: #29323c;
 }
-#header .header {
+.header.header-io.active-header #nav .logo {
+  transform: translateY(0);
+}
+.header .navbar {
   height: 100%;
   transition: 1s ease background-color;
 }
-#header .header #navbar {
+.header .navbar #nav {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -599,17 +603,16 @@ hamburger
   z-index: 5;
 }
 @media (max-width: 1024px) {
-  #header .header #navbar {
+  .header .navbar #nav {
     padding: 0 5vw;
   }
 }
-#header .header #navbar .logo {
+.header .navbar #nav .logo {
   transition: 1s ease;
   opacity: 1;
-  transform: translateY(-11vh);
   transition: 1s;
 }
-#header .header #navbar .logo p {
+.header .navbar #nav .logo p {
   font-size: 1rem;
   font-family: "Kanit", sans-serif;
   font-weight: 400;
@@ -623,11 +626,11 @@ hamburger
   transition: 0.5s;
 }
 @media (min-width: 768px) {
-  #header .header #navbar .logo p {
+  .header .navbar #nav .logo p {
     font-size: 1.25rem;
   }
 }
-#header .header #navbar .logo p span {
+.header .navbar #nav .logo p span {
   padding-right: 0.2rem;
   background: linear-gradient(0deg, #deb86e, #ead2a1);
   background: linear-gradient(#f4f4f4, #fff);
@@ -637,7 +640,7 @@ hamburger
   transition: 0.2s;
 }
 @media (max-width: 1024px) {
-  #header .header #navbar .nav-list .links-container {
+  .header .navbar #nav .nav-list .links-container {
     position: absolute;
     top: 7vh;
     left: 100%;
@@ -647,7 +650,7 @@ hamburger
     transition: 0.5s ease;
     z-index: 5;
   }
-  #header .header #navbar .nav-list .links-container ul {
+  .header .navbar #nav .nav-list .links-container ul {
     margin: 0.5rem 5vw;
     background: #29323c;
     padding: 0.5rem 0;
@@ -664,7 +667,7 @@ hamburger
     overflow-y: auto;
     overflow-x: hidden;
   }
-  #header .header #navbar .nav-list .links-container ul li {
+  .header .navbar #nav .nav-list .links-container ul li {
     transform: translateX(10%);
     opacity: 0;
     transition: 0.3s;
@@ -674,7 +677,7 @@ hamburger
     margin: 0 auto 0.25rem;
     width: 95%;
   }
-  #header .header #navbar .nav-list .links-container ul li a {
+  .header .navbar #nav .nav-list .links-container ul li a {
     margin-right: auto;
     padding: 0;
     width: 50%;
@@ -684,7 +687,7 @@ hamburger
     font-family: "Kanit", sans-serif;
     text-transform: capitalize;
   }
-  #header .header #navbar .nav-list .links-container ul li a::after {
+  .header .navbar #nav .nav-list .links-container ul li a::after {
     content: attr(data-after);
     position: absolute;
     top: 50%;
@@ -696,13 +699,13 @@ hamburger
     z-index: -1;
     transition: 0.3s ease letter-spacing;
   }
-  #header .header #navbar .nav-list .links-container ul li i {
+  .header .navbar #nav .nav-list .links-container ul li i {
     width: 2.5rem;
     text-align: center;
     padding: 0.5rem;
     color: #f4f4f4;
   }
-  #header .header #navbar .nav-list .links-container .contact-links {
+  .header .navbar #nav .nav-list .links-container .contact-links {
     background: #29323c;
     overflow-x: hidden;
     overflow-y: auto;
@@ -712,7 +715,7 @@ hamburger
     padding: 1rem;
     border-radius: 0.5rem;
   }
-  #header .header #navbar .nav-list .links-container .contact-links a {
+  .header .navbar #nav .nav-list .links-container .contact-links a {
     opacity: 0;
     transform: translateY(1rem);
     color: #f4f4f4;
@@ -720,69 +723,69 @@ hamburger
     margin-bottom: 1rem;
     transition: 0.5s;
   }
-  #header .header #navbar .nav-list .links-container .contact-links a i {
+  .header .navbar #nav .nav-list .links-container .contact-links a i {
     color: #ead2a1;
     color: #fff9;
     margin-right: 0.2rem;
     width: 1.5rem;
     border-right: 1px solid #fff4;
   }
-  #header .header #navbar .nav-list .links-container.active {
+  .header .navbar #nav .nav-list .links-container.active {
     left: 0;
     z-index: 50;
   }
-  #header .header #navbar .nav-list .links-container.active .nav-logo {
+  .header .navbar #nav .nav-list .links-container.active .nav-logo {
     transition: 1.5s;
     opacity: 1;
     transform: translateX(0);
   }
-  #header .header #navbar .nav-list .links-container.active ul li {
+  .header .navbar #nav .nav-list .links-container.active ul li {
     transition: 0.5s;
     transform: translateX(0);
     opacity: 1;
   }
-  #header .header #navbar .nav-list .links-container.active ul li i {
+  .header .navbar #nav .nav-list .links-container.active ul li i {
     transition: 1s ease 0.8s;
   }
-  #header .header #navbar .nav-list .links-container.active ul li:nth-child(1) {
+  .header .navbar #nav .nav-list .links-container.active ul li:nth-child(1) {
     transition-delay: 0.3s;
   }
-  #header .header #navbar .nav-list .links-container.active ul li:nth-child(2) {
+  .header .navbar #nav .nav-list .links-container.active ul li:nth-child(2) {
     transition-delay: 0.4s;
   }
-  #header .header #navbar .nav-list .links-container.active ul li:nth-child(3) {
+  .header .navbar #nav .nav-list .links-container.active ul li:nth-child(3) {
     transition-delay: 0.5s;
   }
-  #header .header #navbar .nav-list .links-container.active ul li:nth-child(4) {
+  .header .navbar #nav .nav-list .links-container.active ul li:nth-child(4) {
     transition-delay: 0.6s;
   }
-  #header .header #navbar .nav-list .links-container.active ul li:nth-child(5) {
+  .header .navbar #nav .nav-list .links-container.active ul li:nth-child(5) {
     transition-delay: 0.7s;
   }
-  #header .header #navbar .nav-list .links-container.active ul li:nth-child(6) {
+  .header .navbar #nav .nav-list .links-container.active ul li:nth-child(6) {
     transition-delay: 0.8s;
   }
-  #header .header #navbar .nav-list .links-container.active ul li:nth-child(7) {
+  .header .navbar #nav .nav-list .links-container.active ul li:nth-child(7) {
     transition-delay: 0.9s;
   }
-  #header .header #navbar .nav-list .links-container.active .contact-links a {
+  .header .navbar #nav .nav-list .links-container.active .contact-links a {
     opacity: 1;
     transform: translateY(0);
   }
-  #header .header #navbar .nav-list .links-container.active .contact-links a:nth-child(1) {
+  .header .navbar #nav .nav-list .links-container.active .contact-links a:nth-child(1) {
     transition-delay: 1s;
   }
-  #header .header #navbar .nav-list .links-container.active .contact-links a:nth-child(2) {
+  .header .navbar #nav .nav-list .links-container.active .contact-links a:nth-child(2) {
     transition-delay: 1.1s;
   }
-  #header .header #navbar .nav-list .links-container.active .contact-links a:nth-child(3) {
+  .header .navbar #nav .nav-list .links-container.active .contact-links a:nth-child(3) {
     transition-delay: 1.15s;
   }
-  #header .header #navbar .nav-list .links-container.active .contact-links a:nth-child(4) {
+  .header .navbar #nav .nav-list .links-container.active .contact-links a:nth-child(4) {
     transition-delay: 1.2s;
   }
 }
-#header .header #navbar .nav-list .links-container .nav-logo {
+.header .navbar #nav .nav-list .links-container .nav-logo {
   margin: 0.5rem 5vw 1rem;
   opacity: 1;
   z-index: 1;
@@ -797,25 +800,25 @@ hamburger
   border: 2px solid #ead2a15e;
   background: #29323c;
 }
-#header .header #navbar .nav-list .links-container .nav-logo img {
+.header .navbar #nav .nav-list .links-container .nav-logo img {
   width: 100%;
   height: auto;
 }
 @media (min-width: 768px) {
-  #header .header #navbar .nav-list .links-container .nav-logo {
+  .header .navbar #nav .nav-list .links-container .nav-logo {
     width: 20%;
   }
 }
-#header .header #navbar .nav-list ul {
+.header .navbar #nav .nav-list ul {
   transition: 0.5s;
 }
-#header .header #navbar .nav-list ul li {
+.header .navbar #nav .nav-list ul li {
   list-style: none;
   display: flex;
   align-items: center;
   padding: 0.25rem;
 }
-#header .header #navbar .nav-list ul li a {
+.header .navbar #nav .nav-list ul li a {
   text-decoration: none;
   color: #f4f4f4;
   text-transform: capitalize;
@@ -824,37 +827,37 @@ hamburger
   font-family: "Montserrat", sans-serif;
   transition: 0.2s ease-in-out;
 }
-#header .header #navbar .nav-list ul li i {
+.header .navbar #nav .nav-list ul li i {
   margin-right: 0.5em;
   padding: 0;
   text-align: left;
   border-radius: 5px;
   background: #20262e;
 }
-#header .header #navbar .nav-list ul li:hover {
+.header .navbar #nav .nav-list ul li:hover {
   transition: 0.3s;
 }
-#header .header #navbar .nav-list ul li:hover a {
+.header .navbar #nav .nav-list ul li:hover a {
   color: #ead2a1;
 }
-#header .header #navbar .nav-list ul li:hover a i {
+.header .navbar #nav .nav-list ul li:hover a i {
   color: #ead2a1;
 }
-#header .header #navbar .nav-list ul li:hover a::after {
+.header .navbar #nav .nav-list ul li:hover a::after {
   transform: translate(-50%, -50%) scale(1);
   letter-spacing: initial;
 }
 @media (min-width: 1025px) {
-  #header .header #navbar .nav-list {
+  .header .navbar #nav .nav-list {
     height: 100%;
   }
-  #header .header #navbar .nav-list .nav-logo {
+  .header .navbar #nav .nav-list .nav-logo {
     display: none;
   }
-  #header .header #navbar .nav-list .hamburger {
+  .header .navbar #nav .nav-list .hamburger {
     display: none;
   }
-  #header .header #navbar .nav-list ul {
+  .header .navbar #nav .nav-list ul {
     display: flex;
     justify-content: flex-end;
     align-items: center;
@@ -864,12 +867,12 @@ hamburger
     width: 100%;
     background-color: transparent;
   }
-  #header .header #navbar .nav-list ul li {
+  .header .navbar #nav .nav-list ul li {
     position: relative;
     display: flex;
     align-items: center;
   }
-  #header .header #navbar .nav-list ul li::before {
+  .header .navbar #nav .nav-list ul li::before {
     position: absolute;
     content: "";
     bottom: -0.2rem;
@@ -881,11 +884,11 @@ hamburger
     background-color: #ead2a1;
     transition: 0.3s ease;
   }
-  #header .header #navbar .nav-list ul li:hover::before {
+  .header .navbar #nav .nav-list ul li:hover::before {
     width: 50%;
     opacity: 1;
   }
-  #header .header #navbar .nav-list ul li a {
+  .header .navbar #nav .nav-list ul li a {
     font-size: 1rem;
     padding: 0.25rem;
     font-weight: 400;
@@ -895,41 +898,41 @@ hamburger
     float: left;
     color: #f4f4f4;
   }
-  #header .header #navbar .nav-list ul li a::after {
+  .header .navbar #nav .nav-list ul li a::after {
     display: none;
   }
-  #header .header #navbar .nav-list ul li i {
+  .header .navbar #nav .nav-list ul li i {
     display: none;
   }
-  #header .header #navbar .nav-list ul li:hover a {
+  .header .navbar #nav .nav-list ul li:hover a {
     transition: 0.3s ease;
     color: #ead2a1;
   }
-  #header .header #navbar .nav-list ul li:hover i {
+  .header .navbar #nav .nav-list ul li:hover i {
     transition: 0.3s;
     color: #ead2a1;
   }
-  #header .header #navbar .nav-list ul li:focus::before {
+  .header .navbar #nav .nav-list ul li:focus::before {
     width: 30%;
     opacity: 1;
   }
-  #header .header #navbar .nav-list ul li:focus a {
+  .header .navbar #nav .nav-list ul li:focus a {
     color: #ead2a1;
   }
-  #header .header #navbar .nav-list ul li:focus i {
+  .header .navbar #nav .nav-list ul li:focus i {
     color: #ead2a1;
   }
-  #header .header #navbar .nav-list ul li.active a {
+  .header .navbar #nav .nav-list ul li.active a {
     color: #ead2a1;
   }
-  #header .header #navbar .nav-list ul li.active i {
+  .header .navbar #nav .nav-list ul li.active i {
     color: #ead2a1;
   }
-  #header .header #navbar .nav-list ul.active {
+  .header .navbar #nav .nav-list ul.active {
     background: none;
     box-shadow: none;
   }
-  #header .header #navbar .nav-list .contact-links {
+  .header .navbar #nav .nav-list .contact-links {
     width: 100%;
     display: flex;
     justify-content: flex-end;
@@ -937,21 +940,21 @@ hamburger
     gap: 1rem;
     padding: 0.5rem;
   }
-  #header .header #navbar .nav-list .contact-links a {
+  .header .navbar #nav .nav-list .contact-links a {
     color: #f4f4f4;
     letter-spacing: 0.05rem;
     font-size: 0.9rem;
     opacity: 0.7;
     transition: 0.25s;
   }
-  #header .header #navbar .nav-list .contact-links a i {
+  .header .navbar #nav .nav-list .contact-links a i {
     padding-right: 0.25rem;
     transition: 0.25s;
   }
-  #header .header #navbar .nav-list .contact-links a:hover {
+  .header .navbar #nav .nav-list .contact-links a:hover {
     opacity: 1;
   }
-  #header .header #navbar .nav-list .contact-links a:hover i {
+  .header .navbar #nav .nav-list .contact-links a:hover i {
     transform: translateX(0);
     color: #ead2a1;
   }
